--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,29 @@
 body {
     background-color: aliceblue;
-    display: flex;
-    flex-direction: row;
+    /* display: flex; */
+    /* flex-direction: row; */
     /* flex-wrap: wrap; */
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .image {
     display: block;
     width: 35%;
+}
+
+/* .mainContainer {
+    display: flex;
+    flex-direction: row;
+} */
+
+.buyButton {
+    height: 50px;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.noBuyButton {
+    /* cursor: not-allowed;
+    color: #555; */
+    display: none;
 }
